# rust-openai

./: 1  Cargo.toml  README.md
src/: main.rs  utils.rs
src/fn_callng_wt_tools/: executor.rs  fn_calling.rs  functions.rs  mod.rs  open_ai_client.rs  tools.rs
src/function_calling/: mod.rs  provider.rs  traits.rs  weather_caller.rs
src/structured_output/: equation_solver.rs  event_info.rs  mod.rs  playground.rs  provider.rs  traits.rs  utils.rs
