[package]
name = "rust-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0"}
dotenv = "0.15"
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.21.3"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }